--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,11 @@ DATABASE_URL=postgresql://postgres:password@localhost:5432/ai_learning_db
 
 # OpenAI API Key
 OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxx
+
+
+# Email Configuration
+MAIL_USERNAME=mail.exmple@gmail.com
+MAIL_PASSWORD=ae-xxxxxxxxxxxxxxxxxx
+ADMIN_EMAIL=mail.exmple@gmail.com
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
