style: final UI polish and minor fixes

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,17 @@
-# Database Configuration
+
 DATABASE_URL=postgresql://postgres:password@localhost:5432/ai_learning_db
-
-# OpenAI API Key
+PROJECT_NAME="AI Learning Platform"
 OPENAI_API_KEY=sk-proj-xxxxxxxxxxxxxxxxxxxxxxxx
+SECRET_KEY=a8f-xxxxxxxxxxxxxxxxxxxxxxxx
+ALGORITHM=Hxxxx
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
 
-
-# Email Configuration
 MAIL_USERNAME=mail.exmple@gmail.com
 MAIL_PASSWORD=ae-xxxxxxxxxxxxxxxxxx
 ADMIN_EMAIL=mail.exmple@gmail.com
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
+
+
+
+
