feat: add tests and deployment files - ready for production

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=1440
 MAIL_USERNAME=mail.exmple@gmail.com
 MAIL_PASSWORD=ae-xxxxxxxxxxxxxxxxxx
 ADMIN_EMAIL=mail.exmple@gmail.com
+ADMIN_PHONE=0501234567
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 
