--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: genlearn-backend
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt && alembic upgrade head
     startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
@@ -17,6 +17,10 @@ services:
         generateValue: true
       - key: ALGORITHM
         value: HS256
+      - key: ADMIN_PHONE
+        value: "0501234567"
+      - key: PROJECT_NAME
+        value: "GenLearn AI Learning Platform"
 
 databases:
   - name: genlearn-db
