--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: genlearn-backend
     rootDir: backend
     env: python
-    buildCommand: pip install -r requirements.txt && alembic upgrade head
+    plan: free                 # <--- הוספנו את השורה הזו
+    buildCommand: pip install -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
