--- a/render.yaml
+++ b/render.yaml
@@ -3,9 +3,9 @@ services:
     name: genlearn-backend
     rootDir: backend
     env: python
-    plan: free                 # <--- הוספנו את השורה הזו
+    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    startCommand: uvicorn app.main:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
