--- a/render.yaml
+++ b/render.yaml
@@ -13,16 +13,32 @@ services:
         fromDatabase:
           name: genlearn-db
           property: connectionString
+      - key: PROJECT_NAME
+        value: "AI Learning Platform"
+      - key: ALGORITHM
+        value: "HS256"
+      - key: ACCESS_TOKEN_EXPIRE_MINUTES
+        value: "1440"
+      
+      # --- משתנים סודיים (יוגדר ידנית באתר) ---
       - key: OPENAI_API_KEY
         sync: false
       - key: SECRET_KEY
-        generateValue: true
-      - key: ALGORITHM
-        value: HS256
+        sync: false
+      - key: MAIL_USERNAME
+        sync: false
+      - key: MAIL_PASSWORD
+        sync: false
+      - key: ADMIN_EMAIL
+        sync: false
       - key: ADMIN_PHONE
-        value: "0501234567"
-      - key: PROJECT_NAME
-        value: "GenLearn AI Learning Platform"
+        sync: false
+      - key: MAIL_SERVER
+        sync: false
+      - key: MAIL_PORT
+        sync: false
+      - key: MAIL_FROM
+        sync: false
 
 databases:
   - name: genlearn-db
